fix image widths on mobile

--- a/styles/pages/page.scss
+++ b/styles/pages/page.scss
@@ -15,4 +15,9 @@
   pre {
     padding-top: 1rem !important;
   }
+
+  img {
+    max-width: 100%;
+  }
 }
+
